--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,269 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+$font-min: 12px;
+$font-preferred: 2vw;
+$font-max: 16px;
+$color-blue: #00B2FF;
+$color-text-black: #111026;
+$color-red: #F02D59;
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../assets/fonts/montserrat-regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../assets/fonts/montserrat-bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../assets/fonts/montserrat-light.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+
 body{
-    header{
-        background-color: blue;
-        border: 2px solid yellow;
+    font-family: 'Montserrat', sans-serif;
+}
+
+ul, li {
+    list-style: none;
+}
+
+ul{
+    list-style-type: none;
+}
+
+
+a, a:link, a:visited{
+  text-decoration: none;  
+  cursor: pointer;        
+  outline: none;          
+  -webkit-tap-highlight-color: transparent; 
+}
+
+button, 
+[type="button"], 
+[type="submit"], 
+[type="reset"] {
+  /* Базовый сброс */
+  border: none;        
+  background: none;    
+  padding: 0;          
+  font: inherit;       
+  color: inherit;      
+  cursor: pointer;     
+  outline: none;    
+}
+
+
+.header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    &__info{
+        display: flex;
+        justify-content: center;
+        padding: 11px 0;
+        background-color:$color-blue;
+    }
+
+    &__info-text{
+        color: white;
+        font-size: clamp($font-min, $font-preferred, $font-max);
+    }
+
+    &__container{
+        margin: 0 auto;
+        padding: 0 20px;
+        width: 100%;
+        max-width: 1280px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__actions{
+        display: flex;
+        align-items: center;
+        gap: 15px;
+    }
+
+    &__lang {
+        cursor:pointer;
     }
 }
+
+.logo{
+    display: flex;
+    flex-direction: column;
+    // gap: 2px;
+    padding: 21px 0;
+
+    &__heading{
+        font-size: clamp(22px, 2vw , 28px);
+        color: $color-text-black;
+        font-weight: 700;
+    }
+    &__heading--blue{
+        color: $color-blue;
+    }
+    &__text{
+        font-size:12px;
+        color: $color-text-black;
+        text-transform: uppercase;
+    }
+    &__text--blue{
+        color: $color-blue;
+    }
+}
+
+.nav{
+    color: $color-text-black;
+
+    &__list{
+        display: flex;
+        gap: 30px;
+    }
+
+    &__item{
+        text-transform: uppercase;
+        padding: 5px 0;
+        height: 100%;
+    }   
+
+    &__link{
+        font-size: clamp(12px, 2vw, 14px);
+    }
+}
+
+.buy {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 15px;
+    border: 1px solid transparent;
+    border-radius: 15px;
+    color: white;
+    font-size: clamp(20px, 2vw , 22px);
+    font-weight: 700;
+    transition: background-color .2s ease-in;
+    &__link--blue{
+        background-color: $color-blue;
+        &:hover{
+            background-color: rgba($color-blue, 0.65);
+        }
+    }
+    &__link--red{
+        background-color: $color-red;
+         &:hover{
+            background-color: rgba($color-red, 0.65);
+        }
+    }
+    &__link--small{
+        font-size: 18px;
+    }
+}
+
+.section{
+    width: 100%;
+    max-width:1280px;
+    margin: auto ;
+}
+
+.pass{
+    &__container{
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+    }
+    &__item{
+        display: flex;
+        flex-direction: column;
+        gap: 44px;
+    }
+    &__image{
+        width: 426px;
+    }
+    &__content{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    &__action{
+        display: flex;
+        align-items: center;
+        gap: 24px;
+    }
+    &__text{
+        font-size: 12px;
+    }
+    &__title{
+        text-transform: uppercase;
+        font-weight: 300;
+    }
+    &__city{
+        font-weight: 700;
+    }
+    &__pricing--blue{
+        color: $color-blue;
+    }
+    &__pricing--red{
+        color: $color-red;
+    }
+    &__pricing-text{
+        font-size: 40px;
+        font-weight: 700;
+    }
+    &__price{
+        font-size: 40px;
+        font-weight:300;
+    }
+    &__currency{
+        font-size: 14px;
+    }
+    
+   
+}
+
+.details {
+    width: 139px;
+    display: flex;
+    justify-content: center;
+    padding:  15px;
+    border-radius: 15px;
+    transition: background-color 0.3s ease;
+    color: white;
+    
+    &__link--black {
+      background-color: $color-text-black;
+      &:hover {
+        background-color: rgba($color-text-black, 0.65);
+      }
+    }
+    
+    &__link--blue {
+      background-color: $color-blue;
+      
+      &:hover {
+        background-color: rgba($color-blue, 0.65);
+      }
+    }
+}
+
+
