--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,13 @@
 }
 @font-face {
   font-family: "Montserrat";
+  src: url("../assets/fonts/Montserrat-SemiBold.woff2") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Montserrat";
   src: url("../assets/fonts/montserrat-bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
@@ -197,6 +204,16 @@ button,
   max-width: 1280px;
   margin: auto;
 }
+.section__main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 60px;
+}
 
 .pass__container {
   display: -webkit-box;
@@ -292,4 +309,47 @@ button,
 }
 .details__link--blue:hover {
   background-color: rgba(0, 178, 255, 0.65);
+}
+
+.about {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 130px;
+}
+.about__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+  min-width: 300px;
+  color: #111026;
+}
+.about__heading {
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.about__text {
+  text-align: center;
+  font-size: 14px;
+}
+.about__image {
+  width: 100%;
+  max-width: 230px;
 }
