--- a/css/style.scss
+++ b/css/style.scss
@@ -21,6 +21,14 @@ $color-red: #F02D59;
 
 @font-face {
   font-family: 'Montserrat';
+  src: url('../assets/fonts/Montserrat-SemiBold.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat';
   src: url('../assets/fonts/montserrat-bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
@@ -184,6 +192,11 @@ button,
     width: 100%;
     max-width:1280px;
     margin: auto ;
+    &__main{
+        display: flex;
+        flex-direction: column;
+        gap: 60px;
+    }
 }
 
 .pass{
@@ -266,4 +279,37 @@ button,
     }
 }
 
+.about{
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    gap: 130px;
 
+    &__item{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+        min-width: 300px;
+        color: $color-text-black;
+    }
+
+    &__heading{
+        margin-bottom: 10px;
+        text-align: center;
+        font-size: 24px;
+        text-transform: uppercase;
+        font-weight: 600;
+    }
+
+    &__text{
+        text-align: center;
+        font-size: 14px;
+    }
+
+    &__image{
+        width: 100%;
+        max-width: 230px;
+        
+    }
+}
