--- a/css/style.scss
+++ b/css/style.scss
@@ -203,7 +203,7 @@ button,
     &__container{
         display: flex;
         justify-content: center;
-        gap: 10px;
+        // gap: 10px;
     }
     &__item{
         display: flex;
@@ -282,15 +282,14 @@ button,
 .about{
     display: flex;
     align-items: start;
-    justify-content: center;
-    gap: 130px;
+    justify-content: space-between;
 
     &__item{
+        max-width: 400px;
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 30px;
-        min-width: 300px;
         color: $color-text-black;
     }
 
@@ -305,11 +304,47 @@ button,
     &__text{
         text-align: center;
         font-size: 14px;
+
     }
 
     &__image{
         width: 100%;
         max-width: 230px;
         
+    }
+}
+
+
+.popular{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    &__heading{
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+    &__header{
+        font-size: 32px;
+        font-weight: 600;
+    }
+    &__text{
+        font-size: 20px;
+    }
+    &__collection{
+        display: flex;
+        justify-content: space-between;
+    }
+    &__item{
+        width: 100%;
+        max-width: 300px;
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+    }
+    &__image{
+        width: 100%;
+        max-width: 300px;
+        border-radius: 15px;
     }
 }
