--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,128 @@ button,
   gap: 60px;
 }
 
+.slider {
+  position: relative;
+  overflow: hidden;
+}
+.slider__track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  /* центрирование, если нужно: */
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  /* всё, что выходит за пределы .slider, будет скрыто родителем */
+  -webkit-transition: -webkit-transform 0.5s ease;
+  transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+}
+.slider__image {
+  width: 100%;
+  height: 100%;
+  max-width: 1000px;
+  max-height: 400px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 15px;
+}
+.slider__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 80%;
+          flex: 0 0 80%;
+  position: relative;
+}
+.slider__content {
+  position: absolute;
+  top: 80px;
+  left: 65px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 18px;
+  color: white;
+}
+.slider__title {
+  font-size: 48px;
+  font-weight: 700;
+}
+.slider__text {
+  color: slategrey;
+  max-width: 700px;
+}
+.slider__nav {
+  width: 48px;
+  height: 48px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 100%;
+  background-color: #00B2FF;
+  color: white;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  font-weight: 18px;
+  font-weight: 600;
+  z-index: 10;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.slider__nav:hover {
+  background-color: deepskyblue;
+}
+.slider__nav--prev {
+  left: 0;
+}
+.slider__nav--next {
+  right: 0;
+}
+.slider--multi .slider__item {
+  min-width: 33.3333333333%;
+}
+@media (max-width: 1024px) {
+  .slider--multi .slider__item {
+    min-width: 50%;
+  }
+}
+@media (max-width: 768px) {
+  .slider--multi .slider__item {
+    min-width: 100%;
+  }
+}
+
+.visit {
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  padding: 20px;
+  -webkit-transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease;
+  border-radius: 15px;
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+}
+.visit--black {
+  background-color: #111026;
+}
+.visit--black:hover {
+  background-color: rgba(17, 16, 38, 0.65);
+}
+
 .pass__container {
   display: -webkit-box;
   display: -ms-flexbox;
