--- a/css/style.scss
+++ b/css/style.scss
@@ -199,6 +199,114 @@ button,
     }
 }
 
+.slider{
+    position: relative;
+    overflow: hidden;
+    &__track{
+        display: flex;
+        /* центрирование, если нужно: */
+        align-items: center;
+        /* всё, что выходит за пределы .slider, будет скрыто родителем */
+        transition: transform .5s ease;
+    }
+    &__image{
+        width: 100%;
+        height: 100%;
+        max-width: 1000px;
+        max-height: 400px;
+        object-fit: cover;
+        border-radius: 15px;
+    }
+    &__item{
+        flex: 0 0 80%;
+        position: relative;
+    }
+    &__content{
+        position: absolute;
+        top: 80px;
+        left: 65px;
+        display: flex;
+        flex-direction: column;
+        gap: 18px;
+        color: white;
+    }
+    &__title{
+        font-size: 48px;
+        font-weight: 700;
+    }
+    &__text{
+        color:slategrey;
+        max-width:700px;
+    }
+
+    &__nav{
+        width: 48px;
+        height: 48px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 100%;
+        background-color: $color-blue;
+        color: white;
+        transition: all .3s ease;
+        font-weight: 18px;
+        font-weight: 600;
+        &:hover{
+            background-color:deepskyblue;
+        }   
+        z-index: 10;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        &--prev{
+            left: 0;
+        }
+        &--next{
+            right: 0;
+        }
+    }
+
+    &--multi{
+        .slider__item{
+            min-width: calc(100%/3);
+                 
+            @media (max-width: 1024px) {
+                min-width: 50%;
+            }
+            
+            @media (max-width: 768px) {
+                min-width: 100%;
+            }
+        }
+    }
+//     &--banner {
+//         .slider__content {
+//         position: absolute;
+//         bottom: 10%;
+//         left: 5%;
+//         max-width: 500px;
+//         color: white;
+//         }
+//   }
+}
+
+.visit{
+        max-width: fit-content;
+        padding: 20px;
+        transition: background-color .3s ease;
+        border-radius: 15px;    
+        color: white;
+        font-size: 20px;
+        font-weight: 700;
+    &--black{
+        background-color:$color-text-black;
+        &:hover{
+            background-color: rgba($color-text-black, 0.65);
+        }
+    }
+
+}
+
 .pass{
     &__container{
         display: flex;
