--- a/css/style.css
+++ b/css/style.css
@@ -218,15 +218,12 @@ button,
 .slider {
   position: relative;
   overflow: hidden;
+  width: 100%;
 }
 .slider__track {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  /* центрирование, если нужно: */
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   /* всё, что выходит за пределы .slider, будет скрыто родителем */
   -webkit-transition: -webkit-transform 0.5s ease;
   transition: -webkit-transform 0.5s ease;
@@ -247,6 +244,11 @@ button,
       -ms-flex: 0 0 80%;
           flex: 0 0 80%;
   position: relative;
+}
+.slider__item--small {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 30%;
+          flex: 0 0 30%;
 }
 .slider__content {
   position: absolute;
@@ -304,18 +306,16 @@ button,
 .slider__nav--next {
   right: 0;
 }
-.slider--multi .slider__item {
-  min-width: 33.3333333333%;
+.slider__nav.disabled {
+  background-color: gainsboro;
+  color: #111026;
 }
-@media (max-width: 1024px) {
-  .slider--multi .slider__item {
-    min-width: 50%;
-  }
+.slider--multi {
+  width: 100%;
+  overflow: hidden;
 }
-@media (max-width: 768px) {
-  .slider--multi .slider__item {
-    min-width: 100%;
-  }
+.slider--multi .slider__track {
+  gap: 21px;
 }
 
 .visit {
@@ -418,6 +418,7 @@ button,
   -webkit-transition: background-color 0.3s ease;
   transition: background-color 0.3s ease;
   color: white;
+  font-weight: bold;
 }
 .details__link--black {
   background-color: #111026;
@@ -525,4 +526,96 @@ button,
   width: 100%;
   max-width: 300px;
   border-radius: 15px;
+}
+
+.magazine {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+}
+.magazine__heading {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.magazine__typography {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 15px;
+}
+.magazine__header {
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.see-all-link {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 15px;
+  border-radius: 15px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  background-color: #111026;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+}
+.see-all-link:hover {
+  background-color: rgba(17, 16, 38, 0.65);
+}
+
+.article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 25px;
+  max-width: 406px;
+}
+.article__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+}
+.article__date {
+  color: #A3A3A3;
+  font-size: 12px;
+}
+.article__title {
+  font-size: 16px;
+}
+.article__text {
+  font-size: 12px;
 }
