--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,7 @@ $font-max: 16px;
 $color-blue: #00B2FF;
 $color-text-black: #111026;
 $color-red: #F02D59;
+$color-gray-light: #A3A3A3; 
 
 @font-face {
   font-family: 'Montserrat';
@@ -202,10 +203,9 @@ button,
 .slider{
     position: relative;
     overflow: hidden;
+    width: 100%;
     &__track{
         display: flex;
-        /* центрирование, если нужно: */
-        align-items: center;
         /* всё, что выходит за пределы .slider, будет скрыто родителем */
         transition: transform .5s ease;
     }
@@ -220,6 +220,9 @@ button,
     &__item{
         flex: 0 0 80%;
         position: relative;
+    }
+    &__item--small{
+        flex: 0 0 30%;
     }
     &__content{
         position: absolute;
@@ -265,21 +268,19 @@ button,
             right: 0;
         }
     }
+    &__nav.disabled{
+        background-color: gainsboro;
+        color: $color-text-black;
+    }
 
     &--multi{
-        .slider__item{
-            min-width: calc(100%/3);
-                 
-            @media (max-width: 1024px) {
-                min-width: 50%;
-            }
-            
-            @media (max-width: 768px) {
-                min-width: 100%;
-            }
+        width:100%;
+        overflow: hidden;
+        .slider__track{
+            gap: 21px
         }
     }
-//     &--banner {
+//  &--banner {
 //         .slider__content {
 //         position: absolute;
 //         bottom: 10%;
@@ -370,7 +371,7 @@ button,
     border-radius: 15px;
     transition: background-color 0.3s ease;
     color: white;
-    
+    font-weight: bold;
     &__link--black {
       background-color: $color-text-black;
       &:hover {
@@ -454,5 +455,65 @@ button,
         width: 100%;
         max-width: 300px;
         border-radius: 15px;
+    }
+}
+
+.magazine {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    &__heading{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    &__typography{
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+    &__header{
+        font-size: 28px;
+        font-weight: 600;
+    }
+  
+}
+
+.see-all-link{
+    width:fit-content;
+    padding: 15px;
+    border-radius: 15px;
+    transition: all .3s ease;
+    background-color: $color-text-black;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    &:hover{
+        background-color: rgba($color-text-black, 0.65);
+    }
+}
+
+.article{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    max-width: 406px;
+    &__content{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    &__date{
+        color: $color-gray-light;
+        font-size: 12px;
+    }
+    &__title{
+        font-size: 16px;
+    }
+    &__text{
+        font-size: 12px;
     }
 }
