--- a/css/style.scss
+++ b/css/style.scss
@@ -517,3 +517,106 @@ button,
         font-size: 12px;
     }
 }
+
+.instagram{
+    display: flex;
+    flex-direction: column;
+    gap:30px;
+    &__heading{
+        display: flex;
+        align-items: center;
+        gap: 22px;
+    }
+    &__header{
+        text-transform: uppercase;
+        font-weight: 600;
+    }
+    &__explore{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 6px;
+    }
+    &__item-content{
+        position: absolute;
+        top: 50%; 
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        padding: 20px;
+        opacity: 0;
+        transition: opacity .3s ease;
+        z-index: 2;
+    }
+    &__filter{
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background-color: #111026;
+        opacity: 0;
+        transition: opacity .3s ease;
+        z-index: 1;
+    }
+    &__item{
+        width: 310px;
+        position: relative;
+        overflow: hidden;
+        color: white;
+        transition: all .3s ease;
+        cursor: pointer;
+        &:hover{
+            .instagram__filter{
+                opacity: 0.6;
+            }
+            .instagram__item-content{
+                opacity: 1;
+            }
+        }
+    }
+    
+    &__image{
+        width: 100%;
+        object-fit: cover;
+    }
+    &__reaction{
+        display: flex;
+        align-items: center;
+        gap: 15px;
+    }
+    &__likes , &__comments{
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
+    &__description{
+        width: 100%;
+        height: 146px;
+        overflow: scroll;
+        font-size: 12px;
+    }
+
+}
+
+.partners{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    &__container{
+        width: 100%;
+        max-width: 625px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+        padding: 47px 0;
+        border-radius: 15px;
+       box-shadow: 0px 6px 10px rgba($color-gray-light,0.65);
+    }
+    &__icons{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        padding: 0 10px;
+    }
+}
