--- a/css/style.css
+++ b/css/style.css
@@ -620,6 +620,106 @@ button,
   font-size: 12px;
 }
 
+.faq {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 30px;
+}
+.faq__heading {
+  font-size: 32px;
+}
+
+.accordion {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+.accordion__item {
+  padding: 24px 32px;
+  border-radius: 15px;
+  -webkit-box-shadow: 0px 6px 15px rgba(163, 163, 163, 0.3);
+          box-shadow: 0px 6px 15px rgba(163, 163, 163, 0.3);
+  cursor: pointer;
+}
+.accordion__header {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.accordion__header div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+}
+.accordion__arrow {
+  -webkit-transition: -webkit-transform 0.7s ease-in-out;
+  transition: -webkit-transform 0.7s ease-in-out;
+  transition: transform 0.7s ease-in-out;
+  transition: transform 0.7s ease-in-out, -webkit-transform 0.7s ease-in-out;
+}
+.accordion__heading {
+  font-size: 20px;
+  font-weight: 600;
+}
+.accordion__body {
+  overflow: hidden;
+  max-height: 0;
+  -webkit-transition: max-height 0.7s ease-in-out;
+  transition: max-height 0.7s ease-in-out;
+}
+.accordion__body.is-expanded {
+  max-height: 1000px;
+}
+.accordion__content-wrapper {
+  padding: 27px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 46px;
+}
+.accordion__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+}
+.accordion__point {
+  width: 100%;
+  min-width: 20px;
+  max-width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  background-color: #00B2FF;
+}
+.accordion__text {
+  font-size: 14px;
+}
+
 .instagram {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -768,4 +868,8 @@ button,
   -ms-flex-pack: distribute;
       justify-content: space-around;
   padding: 0 10px;
+}
+
+.hidden {
+  display: none;
 }
